--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,11 @@
-html, body, #root {
-  height: 100%;
+h1 {
+  text-align: center;
+  margin-bottom: 50px;
 }
 
-.App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+button {
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+  border-radius: 15em;
 }
-
-section {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  min-height: 100vh;
-}
-
-
