--- a/src/LoginView.css
+++ b/src/LoginView.css
@@ -1,22 +1,51 @@
-.Snorlax {
+h1 {
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 100px;
+}
+
+button {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-    top: 35px;
-    left: 0;
-    height: 100vh;
-    width: 100%;
-  }
+    margin: auto;
+    margin-bottom: 15px;
+    border-radius: 15em;
+    background-color: #f1e5d7;
+    cursor: pointer;
+    font-size: 35px;
+}
 
-  h2 {
-    padding: 10%
-  }
+.login_button {
+    margin-top: 200px;
+}
 
-  input {
-    width: 30%;
-  }
+body {
+    background-color: #29738e;
+}
 
-  label {
-    width: 10%
-  }
+form {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    margin-top: 170px;
+}
+
+label {
+    margin-bottom: 20px;
+}
+
+.snorlax-belly {
+    width: 600px; 
+    height: 580px;
+    background-color: #f5e1b9; /* Soft beige */
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: inset 0 -5px 10px rgba(0, 0, 0, 0.2);
+}
+
+h2 {
+    font-size: 35px;
+}
