--- a/src/PokemonSearchView/PokemonSearchView.css
+++ b/src/PokemonSearchView/PokemonSearchView.css
@@ -5,3 +5,32 @@
   flex-direction: row;
   align-content: space-between;
 }
+
+.card img {
+  width: 100%; 
+  height: auto; 
+  max-width: 250px; 
+  border-radius: 8px;
+  object-fit: cover; 
+}
+
+
+@media (max-width: 768px) { 
+  .card {
+      width: 200px;
+  }
+
+  .card img {
+      max-width: 200px;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+      width: 150px; 
+  }
+
+  .card img {
+      max-width: 150px; 
+  }
+}
