updated styling on card display

--- a/src/CardsContainer/CardsContainer.css
+++ b/src/CardsContainer/CardsContainer.css
@@ -1,36 +1,46 @@
 .CardsContainer {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-between;
+  justify-content: center;
+  gap: 20px;
+  max-width: calc(5 * 250px + 4 * 20px);
+  margin: auto;
+  padding: 20px;
 }
-
+.card {
+  flex: 0 1 250px;
+}
 .card img {
-  width: 100%; 
-  height: auto; 
-  max-width: 250px; 
+  width: 100%;
+  height: auto;
+  max-width: 250px;
   border-radius: 12px;
-  object-fit: cover; 
+  object-fit: cover;
 }
-
-
-@media (max-width: 768px) { 
-  .card {
-      width: 200px;
+@media (max-width: 1300px) {
+  .CardsContainer {
+      max-width: calc(5 * 200px + 4 * 15px);
   }
-
+  .card {
+      flex: 0 1 200px;
+  }
   .card img {
       max-width: 200px;
   }
 }
-
-@media (max-width: 480px) {
-  .card {
-      width: 150px; 
+@media (max-width: 768px) {
+  .CardsContainer {
+      max-width: calc(3 * 200px + 2 * 15px);
   }
-
-  .card img {
-      max-width: 150px; 
+  .card {
+      flex: 0 1 200px;
+  }
+}
+@media (max-width: 480px) {
+  .CardsContainer {
+      max-width: calc(2 * 150px + 15px);
+  }
+  .card {
+      flex: 0 1 150px;
   }
 }
