--- a/src/BinderView/BinderView.css
+++ b/src/BinderView/BinderView.css
@@ -27,6 +27,26 @@
 	justify-content: space-between;
 	position: absolute;
 	top: 20px;
+	left: 20px;
+}
+
+.searchIcon {
+	display: flex;
+	width: 50px;
+	justify-content: space-between;
+	position: absolute;
+	top: 16px;
+	right: 230px;
+}
+
+.searchBar {
+	padding: 6px;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	width: 10%;
+	height: 2.5%;
+	top: 20px;
 	right: 20px;
 }
 
