--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -5,7 +5,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #98C8DE; 
+    background-color: #103941; 
     font-family: 'Arial', sans-serif;
 }
 
