--- a/src/PokeSearchView/PokeSearchView.css
+++ b/src/PokeSearchView/PokeSearchView.css
@@ -8,44 +8,56 @@
     padding: 20px;
 }
 
+.CardsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .card {
-    flex: 0 1 250px;
+    width: 200px;
+    height: 300px;
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    background-color: #040712;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: transform 0.3s ease-in-out;
 }
 
 .card img {
     width: 100%;
-    height: auto;
-    max-width: 250px;
-    border-radius: 12px;
+    height: 100%;
     object-fit: cover;
+    border-radius: 8px;
+    transition: opacity 0.3s ease-in-out; 
 }
 
-@media (max-width: 1300px) {
-    .PokemonSearchView {
-        max-width: calc(5 * 200px + 4 * 15px);
-    }
-    .card {
-        flex: 0 1 200px;
-    }
-    .card img {
-        max-width: 200px;
-    }
+.card:hover img {
+    opacity: 0.7; 
 }
 
-@media (max-width: 768px) {
-    .PokemonSearchView {
-        max-width: calc(3 * 200px + 2 * 15px);
-    }
-    .card {
-        flex: 0 1 200px;
-    }
+.card:hover {
+    transform: scale(1.05); 
 }
 
-@media (max-width: 480px) {
-    .PokemonSearchView {
-        max-width: calc(2 * 150px + 15px);
-    }
-    .card {
-        flex: 0 1 150px;
-    }
+.card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url('https://assets.codepen.io/13471/sparkles.gif') no-repeat center center;
+    background-size: cover;
+    opacity: 0;
+    pointer-events: none; 
+    transition: opacity 0.3s ease; 
+}
+
+.card:hover:before {
+    opacity: 1; 
 }
