--- a/src/BinderCardDetailView/BinderCardDetailView.css
+++ b/src/BinderCardDetailView/BinderCardDetailView.css
@@ -10,7 +10,10 @@
 
 .view img {
     position: relative;
-    top: -20px
+    top: -20px;
+    width: 33em; 
+    height: 45em;
+    border-radius: 25px;
 }
 
 .view button {
@@ -18,5 +21,6 @@
     cursor: pointer;
     display: inline-block;
     pointer-events: auto;
-    z-index:10
+    z-index:10;
+    margin-top: 10px;
 }
