--- a/src/MagicSearchView/MagicSearchView.css
+++ b/src/MagicSearchView/MagicSearchView.css
@@ -49,3 +49,23 @@
         flex: 0 1 150px;
     }
 }
+
+.searchIcon3 {
+	display: flex;
+	width: 50px;
+	justify-content: space-between;
+	position: absolute;
+	top: 16px;
+	right: 280px;
+}
+
+.searchBar3 {
+	padding: 6px;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	width: 20%;
+	height: 2.5%;
+	top: 20px;
+	right: 20px;
+}
