--- a/src/PokeSearchView/PokeSearchView.css
+++ b/src/PokeSearchView/PokeSearchView.css
@@ -61,3 +61,23 @@
 .card:hover:before {
     opacity: 1; 
 }
+
+.searchIcon2 {
+	display: flex;
+	width: 50px;
+	justify-content: space-between;
+	position: absolute;
+	top: 16px;
+	right: 280px;
+}
+
+.searchBar2 {
+	padding: 6px;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	width: 20%;
+	height: 2.5%;
+	top: 20px;
+	right: 20px;
+}
