added classnames, organized binder view and single card view from binder

--- a/src/CreateBinder/CreateBinder.css
+++ b/src/CreateBinder/CreateBinder.css
@@ -48,7 +48,7 @@ body, html {
     border: solid black;
 }
 
-.binderName {
+.createBinderName {
     width: 100%;
     height: auto;
     min-height: 300px;
