--- a/src/BinderView/BinderView.css
+++ b/src/BinderView/BinderView.css
@@ -5,7 +5,7 @@
     padding: 20px;
 }
 
-/* Top row (Home button + Search bar) */
+
 .topRow {
     display: flex;
     align-items: center;
@@ -28,7 +28,7 @@
     width: 200px;
 }
 
-/* Binder name and rename button row */
+
 .binderHeader {
     display: flex;
     align-items: center;
@@ -36,21 +36,21 @@
     width: 100%;
 }
 
-/* Form for renaming */
+
 .renameForm {
     display: flex;
     gap: 10px;
     margin-top: 5px;
 }
 
-/* Binder cards section */
+
 .binderCards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1.4em;
 }
 
-/* Responsive */
+
 @media screen and (max-width: 1000px) {
     .binderCards {
         grid-template-columns: repeat(3, 1fr);
@@ -66,11 +66,12 @@
 .binderName {
     font-size:xx-large;
     margin: 3rem; 
+    color: #98C8DE;
 }
 
 .renameButton {
     margin: 0px;
-    margin-right: 52rem;
+    margin-right: 59rem;
     font-size: 15px; 
     font-weight: bold;
     padding: 12px 23px;
@@ -79,7 +80,7 @@
     background-color: #F5E6C8;
     color: black;
     cursor: pointer;
-    width: 70%;
+    width: 10%;
     max-width: 400px; 
     transition: all 0.3s ease;
 }
@@ -108,8 +109,8 @@
     width: 71.5vw;
     height: 100vw;
     @media screen and (min-width: 600px) {
-      width: clamp(12.9vw, 61vh, 18vw);
-      height: clamp(18vw, 85vh, 25.2vw);
+      width: clamp(12.9vw, 61vh, 16.1vw);
+      height: clamp(18vw, 85vh, 23vw);
     }
   
     position: relative;
