--- a/src/MagicDetailView/MagicDetailView.css
+++ b/src/MagicDetailView/MagicDetailView.css
@@ -1,30 +1,64 @@
-.view {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100vh;
-    margin-top: -45px;
-}
-
-.detail-card img {
-    width: 100%; 
-    height: auto; 
-    max-height: 500px; 
-    object-fit: contain;
-    border-radius: 10px;
-}
-
-:root {
+.MagicDetails {
+    display: grid;
+    justify-items: center;
+  }
+  
+  .MagicName{
+      font-size:xx-large;
+      color: #98C8DE;
+      margin: 0px;
+  }
+  
+  .MagicLabel {
+      font-size: x-large;
+      color: #98C8DE;
+      margin: 10px;
+  }
+  
+  .MagicImg {
+      display: flex;
+  }
+  
+  .below {
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+  } 
+  
+  select {
+      width: 9rem;
+      height: 2rem;
+  }
+  
+  .add, .back button {
+      font-size: 24px; 
+      font-weight: bold;
+      padding: 18px 30px;
+      border: 4px solid black; 
+      border-radius: 15px;
+      background-color: #F5E6C8;
+      color: black;
+      cursor: pointer;
+      width: 100%;
+      max-width: 400px; 
+      transition: all 0.3s ease;
+  }
+  
+  
+  :root {
     --color1: rgb(0, 231, 255);
     --color2: rgb(255, 0, 231);
     --back: url(https://cdn2.bulbagarden.net/upload/1/17/Cardback.jpg);
   }
   
-  .detail-card {
-    width: 10rem;
-    height: 50rem;
+  .card {
+    width: 71.5vw;
+    height: 100vw;
+    @media screen and (min-width: 600px) {
+      width: clamp(12.9vw, 61vh, 16vw);
+      height: clamp(18vw, 85vh, 22.2vw);
+    }
+  
     position: relative;
     overflow: hidden;
     margin: 20px;
@@ -49,7 +83,7 @@
     transform-origin: center;
   }
   
-  .detail-card:hover {
+  .card:hover {
     box-shadow: 
       -20px -20px 30px -25px var(--color1), 
       20px 20px 30px -25px var(--color2), 
@@ -59,8 +93,8 @@
       0 55px 35px -20px rgba(0, 0, 0, 0.5);
   }
   
-  .detail-card:before,
-  .detail-card:after {
+  .card:before,
+  .card:after {
     content: "";
     position: absolute;
     left: 0;
@@ -73,7 +107,7 @@
     transition: all .33s ease;
   }
   
-  .detail-card:before {
+  .card:before {
     background-position: 50% 50%;
     background-size: 300% 300%;
     background-image: linear-gradient(
@@ -90,7 +124,7 @@
     z-index: 1;
   }
   
-  .detail-card:after {
+  .card:after {
     opacity: 1;
     background-image: url("https://assets.codepen.io/13471/sparkles.gif"), 
       url(https://assets.codepen.io/13471/holo.png), 
@@ -105,8 +139,8 @@
     opacity: .75;
   }
   
-  .detail-card.active:after,
-  .detail-card:hover:after {
+  .card.active:after,
+  .card:hover:after {
     filter: brightness(1) contrast(1);
     opacity: 1;
   }
@@ -117,8 +151,8 @@
     transition: box-shadow 0.1s ease-out;
   }
   
-  .detail-card.active:before,
-  .detail-card:hover:before {
+  .card.active:before,
+  .card:hover:before {
     animation: none;
     background-image: linear-gradient(
       110deg,
@@ -134,15 +168,15 @@
     transition: none;
   }
   
-  .detail-card.active:before,
-  .detail-card:hover:before,
-  .detail-card.active:after,
-  .detail-card:hover:after {
+  .card.active:before,
+  .card:hover:before,
+  .card.active:after,
+  .card:hover:after {
     animation: none;
     transition: none;
   }
   
-  .detail-card.animated {
+  .card.animated {
     transition: none;
     animation: holoCard 12s ease 0s 1;
     &:before { 
@@ -194,24 +228,3 @@
       filter: brightness(1) contrast(1.5);
     }
   }
-
-.backToBinder, .addFave {
-    font-size: 15px; 
-    font-weight: bold;
-    padding: 10px 15px;
-    border: 4px solid black; 
-    border-radius: 15px;
-    background-color: #F5E6C8;
-    color: black;
-    cursor: pointer;
-    width: 100%;
-    max-width: 200px; 
-    transition: all 0.3s ease;
-    margin-top: 0;
-}
-
-.detailCardName {
-    font-size: 4rem;
-    color:#98C8DE;
-    margin: 0;
-}
