--- a/src/MagicCardsContainer/MagicCardsContainer.css
+++ b/src/MagicCardsContainer/MagicCardsContainer.css
@@ -3,17 +3,13 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
 }
-
-/* Overall Container for Layout */
 .MagicContainer {
   display: flex;
-  flex-direction: column; /* Stack elements vertically */
-  height: 100vh; /* Fill the entire viewport height */
+  flex-direction: column; 
+  height: 100vh; 
 }
-
-/* Header Styling */
 .MagicHeader {
-  background-color: #333; /* Background color for the header */
+  background-color: #333; 
   color: white;
   padding: 20px;
   text-align: center;
@@ -21,44 +17,35 @@ body {
   position: relative;
 }
 
-/* Section containing search bar and home button */
 .searchSection {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;  /* Adjust as necessary */
-  background-color: #f1f1f1; /* Light background for search section */
+  padding: 10px 20px; 
+  background-color: #f1f1f1;
 }
-
-/* Home button icon styling */
 .homeIcon {
-  width: 30px; /* Adjust size of home icon */
+  width: 30px; 
   height: auto;
   cursor: pointer;
 }
-
-/* Search bar styling */
 .searchBar2 {
   background-color: #fff;
   padding: 10px;
   margin: 0;
-  width: 60%; /* Adjust width as needed */
+  width: 60%; 
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
-/* Pokemon Cards Container */
 .MagicSearchView {
   display: flex;
-  flex-wrap: wrap; /* Allow cards to wrap to the next line */
+  flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   padding: 20px;
-  flex-grow: 1;  /* Take up remaining space */
+  flex-grow: 1;  
   overflow-y: auto;
 }
-
-/* Individual Pokemon Card */
 .magic-card {
   background-color: #fff;
   border: 1px solid #ccc;
@@ -66,14 +53,4 @@ body {
   width: 150px;
   text-align: center;
   box-sizing: border-box;
-}
-
-/* Footer (optional) */
-footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  position: relative;
-  z-index: 10;
 }
