--- a/src/CreateBinder/CreateBinder.css
+++ b/src/CreateBinder/CreateBinder.css
@@ -9,11 +9,10 @@ body, html {
     font-family: 'Arial', sans-serif;
 }
 .createBinder-container {
-    width: 90%;  
+    width: 150%;  
     max-width: 800px;  
     background-color: #645AAA;
-    padding: 60px;  
-    padding-bottom: 150px;
+   
     border-radius: 20px;  
     text-align: center;
     display: flex;
@@ -22,15 +21,19 @@ body, html {
     border: 4px solid white;  
     box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.5);  
 }
-.submit {
-    font-size: 20px; 
+
+.SubmitNewName {
+    margin-top: 2rem;
+    font-size: 16px; 
     font-weight: bold;
-    padding: 30px 30px;
+    padding: 18px 30px;
     border: 4px solid black; 
-    border-radius: 5px;
-    background-color: #888888;
+    border-radius: 15px;
+    background-color: #F5E6C8;
+    color: black;
     cursor: pointer;
-    width: 35%;
+    width: 71%;
+    max-width: 400px; 
     transition: all 0.3s ease;
 }
 .newName {
@@ -59,4 +62,9 @@ body, html {
 input {
     font-size: 20px;
     background-color: ;
+}
+
+.createBinder-form {
+    margin-top: -8rem;
+    margin-bottom: 10rem;
 }
