--- a/src/PokeDetailView/PokeDetailView.css
+++ b/src/PokeDetailView/PokeDetailView.css
@@ -42,12 +42,12 @@ select {
   --color2: rgb(255, 0, 231);
   --back: url(https://cdn2.bulbagarden.net/upload/1/17/Cardback.jpg);
 }
-.card {
+.PokeDetailCard {
   width: 71.5vw;
   height: 100vw;
   @media screen and (min-width: 600px) {
-    width: clamp(12.9vw, 61vh, 16vw);
-    height: clamp(18vw, 85vh, 22.2vw);
+    width: clamp(12.9vw, 61vh, 28.1vh);
+    height: clamp(18vw, 85vh, 26.2vw);
   }
   position: relative;
   overflow: hidden;
@@ -71,7 +71,7 @@ select {
   background-position: 50% 50%;
   transform-origin: center;
 }
-.card:hover {
+.PokeDetailCard:hover {
   box-shadow: 
     -20px -20px 30px -25px var(--color1), 
     20px 20px 30px -25px var(--color2), 
@@ -80,8 +80,8 @@ select {
     0 0 13px 4px rgba(255,255,255,0.3),
     0 55px 35px -20px rgba(0, 0, 0, 0.5);
 }
-.card:before,
-.card:after {
+.PokeDetailCard:before,
+.PokeDetailCard:after {
   content: "";
   position: absolute;
   left: 0;
@@ -93,7 +93,7 @@ select {
   mix-blend-mode: color-dodge;
   transition: all .33s ease;
 }
-.card:before {
+.PokeDetailCard:before {
   background-position: 50% 50%;
   background-size: 300% 300%;
   background-image: linear-gradient(
@@ -109,7 +109,7 @@ select {
   filter: brightness(.5) contrast(1);
   z-index: 1;
 }
-.card:after {
+.PokeDetailCard:after {
   opacity: 1;
   background-image: url("https://assets.codepen.io/13471/sparkles.gif"), 
     url(https://assets.codepen.io/13471/holo.png), 
@@ -123,18 +123,18 @@ select {
   mix-blend-mode: color-dodge;
   opacity: .75;
 }
-.card.active:after,
-.card:hover:after {
+.PokeDetailCard.active:after,
+.PokeDetailCard:hover:after {
   filter: brightness(1) contrast(1);
   opacity: 1;
 }
-.card.active,
-.card:hover {
+.PokeDetailCard.active,
+.PokeDetailCard:hover {
   animation: none;
   transition: box-shadow 0.1s ease-out;
 }
-.card.active:before,
-.card:hover:before {
+.PokeDetailCard.active:before,
+.PokeDetailCard:hover:before {
   animation: none;
   background-image: linear-gradient(
     110deg,
@@ -149,14 +149,14 @@ select {
   filter: brightness(.66) contrast(1.33);
   transition: none;
 }
-.card.active:before,
-.card:hover:before,
-.card.active:after,
-.card:hover:after {
+.PokeDetailCard.active:before,
+.PokeDetailCard:hover:before,
+.PokeDetailCard.active:after,
+.PokeDetailCard:hover:after {
   animation: none;
   transition: none;
 }
-.card.animated {
+.PokeDetailCard.animated {
   transition: none;
   animation: holoCard 12s ease 0s 1;
   &:before { 
