--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -34,6 +34,7 @@ body, html {
     border-radius: 20px;
     width: 110%;
     border: solid black;
+    border-width: thick;
 }
 .home-image {
     width: 100%;
@@ -88,28 +89,33 @@ body, html {
     padding: 0 20px;
 }
 .favorites-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 20px;
     padding: 15px;
     background-color: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 100%;
+    width: 270px; 
+    height: 225px; 
+    overflow-y: auto; 
+    overflow-x: hidden;
+}
+.favorite-cards {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
     width: 100%;
-  }
+    padding-bottom: 10px;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .favorites-container h2 {
     font-size: 1.5rem;
     color: #333;
     margin-bottom: 10px;
-  }
-
-.favorite-cards {
-    display: flex;
-    gap: 15px;
-    flex-wrap: nowrap;
-    overflow-x: auto; 
-    max-width: 100%;  
-    padding-bottom: 10px; 
 }
 .card-display {
     background: white;
