--- a/src/MagicDetailView/MagicDetailView.css
+++ b/src/MagicDetailView/MagicDetailView.css
@@ -15,6 +15,8 @@
 }
 .MagicImg {
     display: flex;
+    width: 325px;
+    height: 460px;
 }
 .below {
     display:flex;
@@ -71,6 +73,7 @@ select {
     background-repeat: no-repeat;
     background-position: 50% 50%;
     transform-origin: center;
+    
 }
 .MagicCard:hover {
 box-shadow: 
