--- a/src/BinderView/BinderView.css
+++ b/src/BinderView/BinderView.css
@@ -15,9 +15,14 @@
     align-items: center;
     gap: 10px;
 }
-.searchIcon, .homeIcon {
+.searchIcon {
     height: 50px;
 }
+
+.homeIcon {
+  height: 30px;
+}
+
 .searchBar {
     padding: 6px;
     width: 200px;
